Test SauceDemo | Sidebar menu -> add go throw links (#252)